--- a/static/css/base1.styl
+++ b/static/css/base1.styl
@@ -517,7 +517,7 @@ tr.shown td.details-control
 .empresas-none
   padding 10px
   border-radius 10px
-  background-color #f2dede
+  background-color #f1f1f1
   margin-bottom 20px
 
 .empresas-activo
