--- a/templates/hv/inicio.jade
+++ b/templates/hv/inicio.jade
@@ -342,7 +342,7 @@ block body_content
                                             option Investigación y Calidad
                                             option Legal / Asesoría
                                             option Mantenimiento y Reparaciones Técnicas
-                                            option Márketing / Ventas
+                                            option Marketing / Ventas
                                             option Medicina / Salud
                                             option Mercadeo / Publicidad / Comunicación
                                             option Producción / Operaciones
@@ -384,7 +384,7 @@ block body_content
                                             option Educación Básica Secundaria
                                             option Bachillerato / Educación Media
                                             option Universidad / Carrera técnica
-                                            option Universidad / Carrera tennológica
+                                            option Universidad / Carrera tecnológica
                                             option Universidad / Carrera Profesional
                                             option Postgrado / Especialización
                                             option Postgrado / Maestría
