--- a/templates/home.jade
+++ b/templates/home.jade
@@ -179,6 +179,9 @@ block body_content
                             p(class="inline") Se ha enviado un email a
                             strong(class="inline",id="emailConfirmation",style="margin: 0 5px;") {{email}}
                             p(class="inline") porfavor revisalo y confirma que es tu correo.
+                    div(class="row")
+                        div(class="col-md-12")
+                            p(class="inline",style="font-weight: bold;") Revisa la bandeja de SPAM.
 
                 div(class="modal-footer")
                     button(type="button",class="btn btn-default",data-dismiss="modal",id="cerrarFormacionConfirmacionModal") Cerrar
